// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="flex items-center uppercase tracking-wider box-border bg-white border border-primary-600 text-primary-600 focus:outline-none focus:text-primary-900 focus:border-primary-900 hover:border-primary-900 hover:text-primary-900 rounded-lg text-lg px-4 py-3 undefined"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  <p>
    Button
  </p>
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="flex items-center uppercase tracking-wider box-border bg-primary-600 border border-primary-600 text-white focus:outline-none focus:bg-primary-900 focus:border-primary-900 hover:bg-primary-900 hover:border-primary-900 rounded-md text-md px-3 py-2 undefined"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  <p>
    Button
  </p>
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="flex items-center uppercase tracking-wider box-border bg-white border border-primary-600 text-primary-600 focus:outline-none focus:text-primary-900 focus:border-primary-900 hover:border-primary-900 hover:text-primary-900 rounded-md text-md px-3 py-2 undefined"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  <p>
    Button
  </p>
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="flex items-center uppercase tracking-wider box-border bg-white border border-primary-600 text-primary-600 focus:outline-none focus:text-primary-900 focus:border-primary-900 hover:border-primary-900 hover:text-primary-900 rounded-sm text-sm px-2 py-1 undefined"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  <p>
    Button
  </p>
</button>
`;
